messaging_app/messaging_app/blue_deployment.yaml
# MySQL Database Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.33
        ports:
        - containerPort: 3306
---
# Django Application Deployment (Blue Version)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-17T12:00:00Z"
    spec:
      containers:
      - name: messaging-app
        image: messaging-app:2.0  # New image version
        ports:
        - containerPort: 8000
