messaging_app/messaging_app/ingress.yaml
# This manifest creates a rule that routes all traffic directed to the /api/ path to messaging-app-service on port 80.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 80
